--- a/src/app/components/user-test/user-test.component.css
+++ b/src/app/components/user-test/user-test.component.css
@@ -1,13 +1,25 @@
-.row {
-    background-color: rgb(37, 37, 37); 
-    margin: 0;
-}
-
-body {
-    background-color: rgb(37, 37, 37);
-}
-
 div {
     background-color: rgb(37, 37, 37); 
     margin: 0;
+}
+
+.testContainer {
+    text-align: left;
+    border-radius: 1rem;
+    padding-left: 20%;
+    padding-right: 20%;
+    width: 100%;
+}
+
+.testContainer:hover {
+    background-color: rgb(27, 27, 27);
+    cursor:default;
+}
+
+
+.centerDiv {
+    padding-bottom: 1%;
+    justify-content: center;
+    display: flex;
+    text-wrap:nowrap;
 }
