--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -8,7 +8,7 @@ div {
 }
 
 .scrollContainer {
-  max-height: 20vh;
+  max-height: 30vh;
   overflow-y: scroll;
   margin-top: 1%;
   scrollbar-width: none;
@@ -38,13 +38,21 @@ div {
   font-size: 1.15rem;
   text-align: center; 
   padding-top: .5%;
-  padding-bottom: .5%;
+  padding-bottom: 1%;
+  :hover{
+    color:aqua;
+  }
+  
+}
+
+.recentTests {
+  font-size: 1.15rem;
+  text-align: center; 
+  padding-top: .5%;
   :hover{
     color:aqua;
   }
 }
-
-
 
 .userStats {
   background-color: rgb(27, 27, 27);
@@ -54,3 +62,30 @@ div {
   color: rgb(207,207,207);
 }
 
+.biChar {
+  font-weight: bold;
+  font-size: 1.1rem;
+  cursor: default;
+  text-decoration: underline;
+}
+
+.currBigraphPopover {
+  font-weight: bold;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.testContainer {
+  background-color: rgb(27, 27, 27);
+}
+
+.letter {
+  margin: 5px;
+  cursor: pointer;
+  padding: 5px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+}
