--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -8,11 +8,12 @@
           @if(getUser().image != undefined){
             <img style="border-radius: 100%; height: 40%; width: 40%;" [src]="imgUrl">
           }
-        <h3 style="padding-top: 5%;">{{getUser().userName}}</h3>
+        <h4 style="padding-top: 5%;">{{getUser().userName}}</h4>
+        <p><u>Member Since</u><br>{{formatDateString(getUser().joined)}}</p>
         </div>
         <div class="col align-self-center" style="border-right: solid rgb(54, 53, 53) 3px; padding-right: 20%;">
           <div class="row align-self-center text-center userStats" style="margin-bottom: 15%;">
-            <span style="color: rgb(207, 207, 207)"><b>Time Spent Typing:</b></span><br><span>{{userStats.timeTyped}}</span>
+            <span style="color: rgb(207, 207, 207)"><b>Time Spent Typing:</b></span><br><span>{{convertToTime(userStats.timeTyped)}}</span>
           </div>
           <div class="row align-self-center text-center userStats">
             <span style="color: rgb(207, 207, 207)"><b>Total Keys Typed:</b></span><br><span>{{userStats.charsTyped}}</span>
@@ -45,12 +46,14 @@
   <div class="row justify-content-center">
     <div class="keyStatsTips">
       <span style="cursor: pointer; color: rgb(207, 207, 207)" data-bs-html="true"
-      data-bs-toggle="tooltip" data-bs-placement="top" title=
-      "Format:<br><u>K</u>ey: <u>T</u>otal Times Typed | Average <u>A</u>ccuracy |<br> 
-      Average Typing <u>S</u>peed(sec) <br>K: T | A | S"><b style="text-decoration: underline;">Key Statistics</b><i class="bi bi-info-circle smallImg" ></i></span>
+      data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="customTooltip"
+      data-bs-title="Format:<br><br><u>K</u>ey:<br><u>T</u>otal Times Typed | Average <u>A</u>ccuracy |<br> 
+      Average Typing <u>S</u>peed(sec) <br><br>K: T | A | S">
+      <b style="text-decoration: underline;">Key Statistics</b>
+      <i class="bi bi-info-circle smallImg" ></i></span>
     </div>
     <div class="col-2 " style="padding-bottom: 1%; " *ngFor="let key of userKeyStats">
-      <span class="biChar">{{key.key}}</span>: <span>{{key.totalTyped}}</span>
+      <span [ngClass]="{ 'biChar': (key.key != '_' && key.key != 'y'), 'biSpaceChar': key.key == '_' || key.key == 'y'}">{{key.key}}</span>: <span>{{key.totalTyped}}</span>
       | <span>{{key.accuracy}}%</span>
       | <span *ngIf="key.speed != null">{{key.speed.toFixed(3)}}</span>
     </div>
@@ -63,27 +66,23 @@
   <div class="row justify-content-center">
     <div class="keyStatsTips">
       <span style="cursor: pointer; color: rgb(207, 207, 207)" data-bs-html="true"
-      data-bs-toggle="tooltip" data-bs-placement="top" title=
-      "Format:<br><u>B</u>igraph: <br><u>T</u>otal Times Typed | Average <u>A</u>ccuracy |<br> 
-      Average Typing <u>S</u>peed(sec) <br>B: T | A | S"><b style="text-decoration: underline;">Bigraph Statistics</b>
+      data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="customTooltip"
+      data-bs-title="Format:<br><br><u>B</u>igraph: <br><u>T</u>otal Times Typed | Average <u>A</u>ccuracy |<br> 
+      Average Typing <u>S</u>peed(sec)<br><br>B: T | A | S"><b style="text-decoration: underline;">Bigraph Statistics</b>
       <i class="bi bi-info-circle smallImg" ></i></span>
       <span class="currBigraphPopover" data-bs-toggle="popover" 
-      data-bs-placement="top" data-bs-trigger="click" data-bs-html="true"
+      data-bs-placement="top" data-bs-trigger="click"
       data-bs-title="Select Key" data-bs-custom-class="customPopover"
-      data-bs-content="<div id='popoverContent'>
-        <span>A </span><span>B </span><span>C </span><span>D </span>
-        <span>E </span><span>F </span><span>G </span><span>H </span>
-        <span>I </span><span>J </span><span>K </span><span>L </span>
-        <span>M </span><span>N </span><span>O </span><span>P </span>
-        <span>Q </span><span>R </span><span>S </span><span>T </span>
-        <span>U </span><span>V </span><span>W </span><span>X </span>
-        <span>Y </span><span>Z </span><span>_ </span>
-      </div>">
+      >
        [{{currBigraph}}]
       </span>
     </div>
     <div class="col-2" style="padding-bottom: 1%;" *ngFor="let bigraph of userBigraphStats">
-      <span class="biChar">{{bigraph.bigraph}}</span>: <span>{{bigraph.totalTyped}}</span>
+      <span [ngClass]="{ 'biChar': bigraph.bigraph[0] != '_' && bigraph.bigraph[1] != '_' &&
+        bigraph.bigraph[0] != 'y' && bigraph.bigraph[1] != 'y',
+       'biSpaceChar': bigraph.bigraph[0] == '_' || bigraph.bigraph[1] == '_'
+        || bigraph.bigraph[0] == 'y' || bigraph.bigraph[1] == 'y'}">
+       {{bigraph.bigraph}}</span>: <span>{{bigraph.totalTyped}}</span>
       | <span>{{bigraph.accuracy}}%</span>
       | <span>{{bigraph.speed.toFixed(3)}}</span>
     </div>
@@ -97,10 +96,10 @@
     <div class="col-8 align-self-center" style="border-radius: 1rem;">
       <div class="recentTests">
         <span style="cursor: pointer; color: rgb(207, 207, 207)" data-bs-html="true"
-        data-bs-toggle="tooltip" data-bs-placement="top" title=
-        "Format:<br><u>D</u>ate/Time(UTC) |<br> <u>M</u>ode | 
+        data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="customTooltip" title=
+        "Format:<br><br><u>D</u>ate/Time(UTC) |<br> <u>M</u>ode | 
         <br><u>T</u>otal Characters<br>(<u>I</u>ncorrect Characters) 
-        <br>D | M | T(I)"><b style="text-decoration: underline;">Recent Tests</b>
+        <br><br>D | M | T(I)"><b style="text-decoration: underline;">Recent Tests</b>
         <i class="bi bi-info-circle smallImg" ></i></span>
       </div>
       <div class="scrollContainer">
