small tweaks, Daisy approved

--- a/src/styles.css
+++ b/src/styles.css
@@ -93,7 +93,7 @@ span {
     font-size: .85rem;
     text-align: left;
     background-color: black;
-    border: 1px solid aqua;
+    border: 1px solid white;
 }
 
 .customPopover .popover-header {
