--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -9,14 +9,14 @@
             <img style="border-radius: 100%; height: 40%; width: 40%;" [src]="imgUrl">
           }
         <h4 style="padding-top: 5%;">{{getUser().userName}}</h4>
-        <p><u>Member Since</u><br>{{formatDateString(getUser().joined) + " UTC"}}</p>
+        <p><u>Member Since</u><br>{{formatDateString(getUser().joined)}}</p>
         </div>
         <div class="col align-self-center" style="border-right: solid rgb(54, 53, 53) 3px; padding-right: 20%;">
           <div class="row align-self-center text-center userStats" style="margin-bottom: 15%;">
-            <span style="color: rgb(207, 207, 207)"><b>Time Spent Typing:</b></span><br><span>{{convertToTime(userStats.timeTyped)}}</span>
+            <span style="color: rgb(207, 207, 207)"><b><u>Time Spent Typing:</u></b></span><br><span>{{convertToTime(userStats.timeTyped)}}</span>
           </div>
           <div class="row align-self-center text-center userStats">
-            <span style="color: rgb(207, 207, 207)"><b>Total Keys Typed:</b></span><br><span>{{userStats.charsTyped}}</span>
+            <span style="color: rgb(207, 207, 207)"><b><u>Total Keys Typed:</u></b></span><br><span>{{userStats.charsTyped}}</span>
           </div>
         </div>
       </div>
@@ -24,16 +24,16 @@
     <div id="StatsSection" class="col-6 align-self-center" style="margin-right: 10%">
       <div class="row text-center">
         <div *ngIf="userStats.wpm != null" class="col" >
-          <div class="userStats"><b>Avg. Speed:</b><br>{{userStats.wpm.toFixed(2)}}wpm</div>
+          <div class="userStats"><b><u>Avg. Speed:</u></b><br>{{userStats.wpm.toFixed(2)}}wpm</div>
         </div>
         <div *ngIf="userStats.topWpm != null" class="col">
-          <div class="userStats"><b>Top Speed:</b><br>{{userStats.topWpm.toFixed(2)}}wpm</div>
+          <div class="userStats"><b><u>Top Speed:</u></b><br>{{userStats.topWpm.toFixed(2)}}wpm</div>
         </div>
         <div class="col">
-          <div class="userStats"><b>Avg. Acc:</b><br>{{userStats.accuracy}}%</div>
+          <div class="userStats"><b><u>Avg. Acc:</u></b><br>{{userStats.accuracy}}%</div>
         </div>
         <div class="col">
-          <div class="userStats"><b>Top Acc:</b><br>{{userStats.topAccuracy}}%</div>
+          <div class="userStats"><b><u>Top Acc:</u></b><br>{{userStats.topAccuracy}}%</div>
         </div>
       </div>
     </div>
